fix: Make text scroll 'faster' on small screens

--- a/styles/pages/Index.module.scss
+++ b/styles/pages/Index.module.scss
@@ -286,7 +286,7 @@
           font-size: 27px;
           color: #ccc;
           z-index: 2;
-          padding: 12px 100px 12px 12px;
+          padding: 12px 52px 12px 12px;
 
           &:active {
             outline: 2px solid #5024ff;
